--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -44,6 +44,7 @@
 @import 'components/header',
 		'components/nav',
 		'components/buttons',
+		'components/site-logo',
 		'components/quote',
 		'components/cover',
 		'components/card',
@@ -51,7 +52,7 @@
 		'components/caption',
 //		'components/accordion',
 		'components/carousel',
-//		'components/link-list',
+		'components/link-list',
 		'components/carousel',
 		'components/breadcrumb',
 //		'components/map',
@@ -59,6 +60,7 @@
 //		'components/tile',
 //		'components/pagination',
 		'components/alert',
+		'components/icon-list',
 		'components/nav-super',
 		'components/nav-footer',
 		'components/image-mozaic',
