--- a/iCAN.Web/Views/Partials/Components/Downloads.cshtml
+++ b/iCAN.Web/Views/Partials/Components/Downloads.cshtml
@@ -43,7 +43,9 @@
 
     <li class="c-link-list__item">
         <a href="@file.Url" title="@altText" class="c-link-list__link u-clearfix" download>
-            <i class="@iconClass c-link-list__icon"></i>
+			<svg class="c-link-list__icon u-icon u-icon--32">
+				<use xlink:href="/assets/icons/icons.svg#file"></use>
+			</svg>
             <span class="c-link-list__name">@file.Name</span>
             <span class="c-link-list__meta">@fileSize</span>
         </a>
