--- a/_assets/sass/components/nav.scss
+++ b/_assets/sass/components/nav.scss
@@ -131,6 +131,7 @@
 	.c-nav--main {
 		position: relative;
 		z-index: 10;
+		margin-top: 1rem;
 
 		.c-nav__item {
 			display: inline;
@@ -157,7 +158,7 @@
 
 				&:after {
 					opacity: 1;
-					transform: translateY(-.5rem);
+					transform: translateY(-.4rem);
 				}
 
 			}
@@ -166,7 +167,7 @@
 
 				&:after {
 					opacity: 1;
-					transform: translateY(-.5rem);
+					transform: translateY(-.4rem);
 				}
 
 			}
@@ -179,13 +180,13 @@
 		.c-nav__list--sub {
 			min-width: 20rem;
 			color: $white;
-			background-color: $pri;
+			background-color: $sec;
 			position: absolute;
 			left: 0;
 			opacity: 0;
 			visibility: hidden;
 			margin-top: 0;
-			transform: translateY(-.3rem);
+			transform: translate(1rem, -.3rem);
 			transition: opacity $speed $ease,
 						visibility $speed $ease,
 						transform $speed $ease;
@@ -196,22 +197,27 @@
 			}
 
 			.c-nav__link {
+				color: $white;
 				margin: 0;
 				padding-top: 1rem;
+				font-size: 1.4rem;
+
+				&:after {
+					display: none;
+				}
 
 				&:hover,
 				&:focus {
-					color: $white;
-					background-color: darken( $pri, 15 );
+					color: $pri;
+					background-color: $purple-1;
 				}
 
 				&.is-active {
-					color: $white;
-					background-color: $sec;
+					color: $pri;
 
 					&:hover,
 					&:focus {
-						background-color: $sec;
+						color: $pri;
 					}
 				}
 
@@ -224,7 +230,7 @@
 			.c-nav__list--sub {
 				opacity: 1;
 				visibility: visible;
-				transform: translateY(0);
+				transform: translate(1rem, -1.4rem);
 			}
 
 		}
