--- a/iCAN.Web/Views/Partials/Modules/LatestNews.cshtml
+++ b/iCAN.Web/Views/Partials/Modules/LatestNews.cshtml
@@ -25,7 +25,7 @@
 					@Html.Partial("~/Views/Partials/Components/Card.cshtml", new CardViewModel {
 						Image = item.GetPropertyValue<IPublishedContent>("featuredImage"),
 						Headline = item.GetPropertyValue<string>("headline", item.Name),
-						Category = ContentTypeHelper.GetContentTypeLabelFromPage(item),
+						Category = ContentTypeHelper.GetNewsTypeLabelFromPage(item.DocumentTypeAlias),
 						Label = item.GetPropertyValue<DateTime>("releaseDate").ToString("dd/MM"),
 						Copy = item.GetPropertyValue<string>("pageDescription"),
 						Url = isInTheMedia ? item.GetPropertyValue<string>("source") : item.Url,
