--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -58,7 +58,7 @@
 //		'components/map',
 		'components/social',
 //		'components/tile',
-//		'components/pagination',
+		'components/pagination',
 		'components/alert',
 		'components/icon-list',
 		'components/nav-super',
