--- a/iCAN.Web/Views/article.cshtml
+++ b/iCAN.Web/Views/article.cshtml
@@ -1,5 +1,5 @@
-﻿@using TGDH;
-@using TGDH.Core.Models;
+﻿@using iCAN;
+@using iCAN.Core.Models;
 @inherits UmbracoViewPage<IPublishedContent>
 @{
     Layout = "Master.cshtml";
@@ -10,8 +10,8 @@
 }
 
 <main id="main" class="o-page__inner" role="main">
-	<article>
-		<header>
+	<article class="o-section">
+		<header class="o-wrap o-wrap--x-large">
 			<h1 itemprop="headline">@headline</h1>
 			<ul class="c-meta">
 				<li class="c-meta__item">
@@ -21,19 +21,12 @@
 				</li>
 			</ul>
 		</header>
-		<div class="u-intro" itemprop="description">
+		<div class="u-intro o-wrap o-wrap--x-large" itemprop="description">
 			<p>@Model.GetPropertyValue("pageDescription")</p>
 		</div>
 		<div class="s-free-content" itemprop="articleBody">
 			@Html.Partial("Modules/PageComponents")
 		</div>
-
-		@*
-		* @TODO: 
-		* Related articles
-		* Social share
-		* Comments
-		*@
 
 		@*
 		* meta data related to the article - an image that will appear in search results
