Fix dependency ref errors in views

--- a/iCAN.Web/Views/Blog.cshtml
+++ b/iCAN.Web/Views/Blog.cshtml
@@ -1,7 +1,7 @@
-﻿@using TGDH;
-@using TGDH.Core.Data;
-@using TGDH.Core.Utility;
-@using TGDH.Core.Models;
+﻿@using iCAN;
+@using iCAN.Core.Data;
+@using iCAN.Core.Utility;
+@using iCAN.Core.Models;
 @inherits UmbracoViewPage<IPublishedContent>
 @{
     Layout = "Master.cshtml";
