--- a/iCAN.Web/Views/Contact.cshtml
+++ b/iCAN.Web/Views/Contact.cshtml
@@ -1,4 +1,4 @@
-﻿@using TGDH.Forms.Models
+﻿@using iCAN.Forms.Models
 @inherits UmbracoViewPage<IPublishedContent>
 @{
     Layout = "Master.cshtml";
