--- a/iCAN.Web/Views/Post.cshtml
+++ b/iCAN.Web/Views/Post.cshtml
@@ -1,5 +1,5 @@
-﻿@using TGDH;
-@using TGDH.Core.Models;
+﻿@using iCAN;
+@using iCAN.Core.Models;
 @inherits UmbracoViewPage<IPublishedContent>
 @{
     Layout = "Master.cshtml";
@@ -49,7 +49,7 @@
 		}
 
 		@*
-		* @TODO: 
+		* @TODO:
 		* Related posts
 		* Social share
 		* Comments
