--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -52,6 +52,8 @@
 		'components/caption',
 //		'components/accordion',
 		'components/carousel',
+		'components/heading',
+		'components/heading-feature',
 		'components/link-list',
 		'components/carousel',
 		'components/breadcrumb',
