--- a/iCAN.Web/assets/css/ie.css
+++ b/iCAN.Web/assets/css/ie.css
@@ -1319,7 +1319,6 @@ img.mfp-img {
   display: block;
   line-height: 0;
   box-sizing: border-box;
-  padding: 40px 0 40px;
   margin: 0 auto; }
 
 /* The shadow behind the image */
@@ -1350,7 +1349,6 @@ img.mfp-img {
   margin: 0; }
 
 .mfp-bottom-bar {
-  margin-top: -36px;
   position: absolute;
   top: 100%;
   left: 0;
@@ -1372,8 +1370,8 @@ img.mfp-img {
 
 @media screen and (max-width: 800px) and (orientation: landscape), screen and (max-height: 300px) {
   /**
-   * Remove all paddings around the image on small screen
-   */
+	 * Remove all paddings around the image on small screen
+	 */
   .mfp-img-mobile .mfp-image-holder {
     padding-left: 0;
     padding-right: 0; }
@@ -1426,32 +1424,55 @@ img.mfp-img {
   max-width: 75rem; }
 
 .mfp-close {
-  font-size: 2rem;
+  width: 6rem;
+  height: 6rem;
   color: #FFFFFF;
   position: absolute;
   font-weight: 700;
+  border-radius: 50%;
   background-color: #ff9933;
-  top: 0;
-  right: 0;
-  padding: 0.5rem 3rem;
+  top: -3rem;
+  right: -3rem;
+  line-height: 1;
+  text-align: center;
+  padding: 2.2rem 2.5rem;
+  z-index: 1;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
   transition: color 0.3s ease, background 0.3s ease; }
-  .mfp-close:hover, .mfp-close:focus {
-    color: #FFFFFF;
-    background-color: #4f1c47; }
+  .mfp-close:hover {
+    background: #4f1c47; }
+  .mfp-close:focus {
+    border-color: #4f1c47; }
 
 @media only screen and (min-width: 800px) {
   .white-popup {
     padding: 4rem; } }
 
+.mfp-content .grecaptcha-badge {
+  display: none; }
+
+.modal-wrap {
+  position: relative;
+  background: #FFFFFF;
+  width: auto;
+  margin: 3.4em auto; }
+  .modal-wrap .c-alert {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0; }
+
 /*
-====== Zoom effect ======
-*/
+  ====== Zoom effect ======
+  */
 .mfp-zoom-in {
   /* start state */
   /* animate in */
   /* animate out */ }
 
-.mfp-zoom-in .mfp-with-anim {
+.mfp-zoom-in .mfp-with-anim,
+.mfp-zoom-in .mfp-content {
   opacity: 0;
   transition: all 0.2s ease-in-out;
   -webkit-transform: scale(0.8);
@@ -1462,7 +1483,8 @@ img.mfp-img {
   opacity: 0;
   transition: all 0.3s ease-out; }
 
-.mfp-zoom-in.mfp-ready .mfp-with-anim {
+.mfp-zoom-in.mfp-ready .mfp-with-anim,
+.mfp-zoom-in.mfp-ready .mfp-content {
   opacity: 1;
   -webkit-transform: scale(1);
       -ms-transform: scale(1);
@@ -1471,7 +1493,8 @@ img.mfp-img {
 .mfp-zoom-in.mfp-ready.mfp-bg {
   opacity: 0.8; }
 
-.mfp-zoom-in.mfp-removing .mfp-with-anim {
+.mfp-zoom-in.mfp-removing .mfp-with-anim,
+.mfp-zoom-in.mfp-removing .mfp-content {
   -webkit-transform: scale(0.8);
       -ms-transform: scale(0.8);
           transform: scale(0.8);
@@ -1481,76 +1504,76 @@ img.mfp-img {
   opacity: 0; }
 
 /*
-====== Move-from-top effect ======
+  ====== Move-from-top effect ======
 
 
-.mfp-move-from-top {
-  // start state
-  // animate in
-  // animate out
-}
-.mfp-move-from-top .mfp-content {
-  vertical-align: top;
-}
-.mfp-move-from-top .mfp-with-anim {
-  opacity: 0;
-  transition: all 0.2s;
-  transform: translateY(-100px);
-}
-.mfp-move-from-top.mfp-bg {
-  opacity: 0;
-  transition: all 0.2s;
-}
-.mfp-move-from-top.mfp-ready .mfp-with-anim {
-  opacity: 1;
-  transform: translateY(0);
-}
-.mfp-move-from-top.mfp-ready.mfp-bg {
-  opacity: 0.8;
-}
-.mfp-move-from-top.mfp-removing .mfp-with-anim {
-  transform: translateY(-50px);
-  opacity: 0;
-}
-.mfp-move-from-top.mfp-removing.mfp-bg {
-  opacity: 0;
-}
+  .mfp-move-from-top {
+	// start state
+	// animate in
+	// animate out
+  }
+  .mfp-move-from-top .mfp-content {
+	vertical-align: top;
+  }
+  .mfp-move-from-top .mfp-with-anim {
+	opacity: 0;
+	transition: all 0.2s;
+	transform: translateY(-100px);
+  }
+  .mfp-move-from-top.mfp-bg {
+	opacity: 0;
+	transition: all 0.2s;
+  }
+  .mfp-move-from-top.mfp-ready .mfp-with-anim {
+	opacity: 1;
+	transform: translateY(0);
+  }
+  .mfp-move-from-top.mfp-ready.mfp-bg {
+	opacity: 0.8;
+  }
+  .mfp-move-from-top.mfp-removing .mfp-with-anim {
+	transform: translateY(-50px);
+	opacity: 0;
+  }
+  .mfp-move-from-top.mfp-removing.mfp-bg {
+	opacity: 0;
+  }
 
-/*
+  /*
 
-====== Zoom-out effect ======
+  ====== Zoom-out effect ======
 
 
-.mfp-zoom-out {
-  // start state
-  // animate in
-  // animate out
-}
-.mfp-zoom-out .mfp-with-anim {
-  opacity: 0;
-  transition: all 0.3s ease-in-out;
-  transform: scale(1.3);
-}
-.mfp-zoom-out.mfp-bg {
-  opacity: 0;
-  transition: all 0.3s ease-out;
-}
-.mfp-zoom-out.mfp-ready .mfp-with-anim {
-  opacity: 1;
-  transform: scale(1);
-}
-.mfp-zoom-out.mfp-ready.mfp-bg {
-  opacity: 0.8;
-}
-.mfp-zoom-out.mfp-removing .mfp-with-anim {
-  transform: scale(1.3);
-  opacity: 0;
-}
-.mfp-zoom-out.mfp-removing.mfp-bg {
-  opacity: 0;
-}
+  .mfp-zoom-out {
+	// start state
+	// animate in
+	// animate out
+  }
+  .mfp-zoom-out .mfp-with-anim {
+	opacity: 0;
+	transition: all 0.3s ease-in-out;
+	transform: scale(1.3);
+  }
+  .mfp-zoom-out.mfp-bg {
+	opacity: 0;
+	transition: all 0.3s ease-out;
+  }
+  .mfp-zoom-out.mfp-ready .mfp-with-anim {
+	opacity: 1;
+	transform: scale(1);
+  }
+  .mfp-zoom-out.mfp-ready.mfp-bg {
+	opacity: 0.8;
+  }
+  .mfp-zoom-out.mfp-removing .mfp-with-anim {
+	transform: scale(1.3);
+	opacity: 0;
+  }
+  .mfp-zoom-out.mfp-removing.mfp-bg {
+	opacity: 0;
+  }
 
-*/
+  */
 /* ===========================================================
 
 	# Header
@@ -2090,6 +2113,8 @@ img.mfp-img {
   .c-footer .c-footer__logo {
     max-width: 8.5rem;
     opacity: 0.4; }
+  .c-footer a {
+    font-weight: 700; }
 
 .c-footer__sub {
   font-size: 1.4rem;
@@ -2101,14 +2126,11 @@ img.mfp-img {
 
 .c-footer__micro {
   font-size: 1.2rem; }
-  .c-footer__micro a {
-    font-weight: 900; }
 
 .c-footer__tgdh {
   display: inline-block; }
   .c-footer__tgdh a {
-    color: #FFFFFF;
-    font-weight: 900; }
+    color: #FFFFFF; }
 
 @media only screen and (min-width: 1000px) {
   .c-footer__inner {
@@ -2388,6 +2410,50 @@ img.mfp-img {
   .c-carouse--large .c-carousel--next,
   .c-carousel--cards .c-carousel--next {
     right: -6rem; } }
+
+/* ===========================================================
+	# Heading
+=========================================================== */
+.c-heading:after {
+  content: "";
+  width: 8rem;
+  height: .4rem;
+  display: block;
+  background-color: #4f1c47;
+  margin: 1.7em 0; }
+
+.c-heading.c-heading--center {
+  text-align: center; }
+  .c-heading.c-heading--center:after {
+    margin-left: auto;
+    margin-right: auto; }
+
+.c-heading__headline,
+.c-heading__subtitle {
+  color: #4f1c47; }
+
+.c-heading__subtitle {
+  max-width: 44rem;
+  font-style: italic;
+  padding-bottom: 0; }
+
+/* ===========================================================
+	# Heading - featured
+=========================================================== */
+.c-heading-feature {
+  text-align: center;
+  margin-bottom: 3.4em; }
+
+.c-heading-feature__headline {
+  color: #4f1c47; }
+
+.c-heading-feature__subtitle {
+  max-width: 44rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 0;
+  font-size: 1.4rem;
+  font-weight: 700; }
 
 /* ===========================================================
 	# Link list
