--- a/_assets/sass/objects/forms.scss
+++ b/_assets/sass/objects/forms.scss
@@ -1,5 +1,5 @@
 /* ===========================================================
-	
+
 	# Form
 
 =========================================================== */
@@ -7,8 +7,28 @@ $line-height-half: $line-height / 2;
 
 .o-form__field {
 	& + & {
-		padding-top: $padding-small;
+		margin-top: 1.4rem;
 	}
+}
+
+.o-form__field {
+	position: relative;
+
+	input,
+	textarea {
+		box-shadow: $box-shadow-3;
+		background-color: $white;
+
+		&:focus {
+			box-shadow: $box-shadow-focus;
+		}
+	}
+
+	.o-validation {
+		position: absolute;
+		right: 0;
+	}
+
 }
 
 .o-input,
@@ -36,13 +56,33 @@ $line-height-half: $line-height / 2;
 	}
 }
 
+.field-validation-error {
+	color: $error;
+}
+
+.enhance {
+
+	.o-form--simple {
+
+		.o-label {
+			@include hide-text;
+		}
+
+	}
+
+}
+
+.o-form__field--submit {
+	text-align: right;
+}
 
 
 //= LABEL ====================================================
 
 .o-label {
-	font-weight: $bold;
-	padding-bottom: $line-height / 4;
+	font-size: 1.8rem;
+	color: $dark-1;
+	padding-bottom: $line-height / 2;
 }
 
 .o-label__note {
@@ -59,7 +99,6 @@ $line-height-half: $line-height / 2;
 .o-select {
 	position: relative;
 	vertical-align: middle;
-	z-index: 1;
 
 	select {
 		position: relative;
@@ -134,28 +173,82 @@ $line-height-half: $line-height / 2;
 
 }
 
+.o-fieldset--description-list {
+
+	.o-fieldset__item {
+
+		& + .o-fieldset__item {
+			margin-top: $line-height;
+		}
+
+	}
+
+}
+
+@include respond-min($mq-large) {
+
+	.o-fieldset--description-list {
+
+		.o-fieldset__item {
+			@include clearfix();
+			font-size: 1.8rem;
+
+			& + .o-fieldset__item {
+				margin-top: $line-height;
+			}
+		}
+
+		.o-checkbox,
+		.o-radio {
+			@include column(2.5/10, $gutter: 2);
+		}
+
+		.o-fieldset__item-description {
+			@include column(7.5/10, $gutter: 2);
+		}
+
+	}
+
+	.enhance {
+
+		.o-fieldset--description-list {
+
+			.o-checkbox,
+			.o-radio {
+				padding-top: 0;
+			}
+
+		}
+
+	}
+
+}
+
 .enhance {
 
 	.o-checkbox,
 	.o-radio {
 		font-weight: normal;
-		padding: $line-height-half $line-height-half $line-height-half 3rem;
+		padding: $line-height-half 0;
 		position: relative;
 
-		.o-checkbox__label:before,
-		.o-radio__label:before {
-			content: "";
-			width: 2rem;
-			height: 2rem;
-			background: transparent;
-			border: $border-width solid $border-colour;
-			box-sizing: border-box;
-			content: '';
+		.o-checkbox__button,
+		.o-radio__button {
+			width: 3rem;
+			height: 3rem;
+			border: .2rem solid $light-1;
+			background-color: $white;
+			display: inline-block;
+			margin-right: 1rem;
+			vertical-align: middle;
+			border-radius: $border-radius;
+			transition: background-color $speed $ease;
 			position: absolute;
-			top: $line-height-half;
 			left: 0;
-			transition: background-color $speed $ease,
-						border-color $speed $ease;
+
+			.no-enhance & {
+				display: none;
+			}
 		}
 
 		.o-checkbox__input,
@@ -163,23 +256,57 @@ $line-height-half: $line-height / 2;
 			display: none;
 
 			&:checked {
-				
-				+ .o-checkbox__label:before,
-				+ .o-radio__label:before {
-					background-color: $pri;
-					border-color: darken( $pri, 10 );
+
+				& + input[type="hidden"] + .o-checkbox__label .o-checkbox__button,
+				& + input[type="hidden"] + .o-radio__label-radio__button .o-radio__button,
+				& + .o-checkbox__label .o-checkbox__button,
+				& + .o-radio__label-radio__button .o-radio__button {
+
+					.o-checkbox__icon {
+						opacity: 1;
+					}
 				}
 
 			}
 
 		}
 
-		.o-checkbox__label:before {
-			border-radius: $border-radius;
-		}
-
 		.o-radio__label:before {
 			border-radius: 50%;
+		}
+
+	}
+
+	.o-checkbox__label,
+	.o-radio__label {
+		font-weight: 900;
+		font-size: 1.8rem;
+		display: block;
+		position: relative;
+		padding-left: 4rem;
+	}
+
+	.o-checkbox__icon {
+		width: 14px;
+		height: 12px;
+		opacity: 0;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		margin-top: -1px;
+		transform: translate(-50%, -50%) rotate(45deg);
+		transition: opacity $speed $ease;
+		line-height: 1;
+
+		&::before {
+			content: "";
+			width: 50%;
+			height: 100%;
+			display: block;
+			margin: auto;
+			border-right: 3px solid $dark-1;
+			border-bottom: 3px solid $dark-1;
+			box-sizing: border-box;
 		}
 
 	}
@@ -228,6 +355,114 @@ $line-height-half: $line-height / 2;
 			// margin-top: $padding-small / 2;
 		}
 
+	}
+
+}
+
+.o-form__inline-field {
+
+	.flexbox & {
+		display: flex;
+		align-items: center;
+	}
+
+	.o-label {
+		display: inline-block;
+		padding-bottom: 0;
+		margin-right: $line-height;
+	}
+
+	.selectric-wrapper {
+		display: inline-block;
+	}
+
+}
+
+.o-form__row {
+
+	& + & {
+		margin-top: $line-height;
+	}
+
+}
+
+
+@include respond-min( $mq-medium ) {
+
+	.o-form__row {
+
+		& + & {
+			margin-top: 5rem;
+		}
+
+	}
+
+	.o-form__row--two,
+	.o-form__row--three{
+		@include clearfix();
+
+		.o-form__field {
+			margin-top: 0;
+		}
+
+	}
+
+	.o-form__row--two {
+
+		.o-form__field {
+			@include column(1/2, $gutter: 2);
+		}
+
+	}
+
+	.o-form__row--three {
+
+		.o-form__field {
+			@include column(1/3, $gutter: 2);
+		}
+
+	}
+
+}
+
+@include respond-min-max( $mq-small, $mq-large ) {
+
+	.o-form__row--two-one {
+		@include clearfix();
+
+		.o-form__field--first,
+		.o-form__field--second {
+			@include column(1/2, $cycle: 2, $gutter: 2);
+			margin-top: 0;
+			margin-bottom: $line-height;
+		}
+
+		.o-form__field--last {
+			clear: both;
+		}
+
+	}
+
+}
+
+@include respond-min( $mq-large ) {
+
+	.o-form__row--two-one {
+		@include clearfix();
+
+		.o-form__field {
+			margin-top: 0;
+		}
+
+		.o-form__field--first,
+		.o-form__field--second {
+			@include column(1/4, $gutter: 2);
+		}
+
+		.o-form__field--last {
+
+			@include column(2/4, $gutter: 2);
+		}
 	}
 
 }
