--- a/iCAN.Web/assets/css/style.css
+++ b/iCAN.Web/assets/css/style.css
@@ -544,7 +544,7 @@ textarea {
   input:focus,
   select:focus,
   textarea:focus {
-    border-color: #ff9933; }
+    border-color: #4f1c47; }
   .is-valid input, .is-valid
   select, .is-valid
   textarea {
@@ -737,12 +737,25 @@ html {
     border-radius: 0 0 0.3rem 0.3rem; } }
 
 /* ===========================================================
-	
+
 	# Form
 
 =========================================================== */
 .o-form__field + .o-form__field {
-  padding-top: 4rem; }
+  margin-top: 1.4rem; }
+
+.o-form__field {
+  position: relative; }
+  .o-form__field input,
+  .o-form__field textarea {
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+    background-color: #FFFFFF; }
+    .o-form__field input:focus,
+    .o-form__field textarea:focus {
+      box-shadow: 0 0 10px 2px rgba(79, 28, 71, 0.3); }
+  .o-form__field .o-validation {
+    position: absolute;
+    right: 0; }
 
 .o-input,
 .o-select select,
@@ -763,9 +776,26 @@ html {
     display: block;
     color: #f44336; }
 
+.field-validation-error {
+  color: #f44336; }
+
+.enhance .o-form--simple .o-label {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px; }
+
+.o-form__field--submit {
+  text-align: right; }
+
 .o-label {
-  font-weight: 700;
-  padding-bottom: 0.425em; }
+  font-size: 1.8rem;
+  color: #222222;
+  padding-bottom: 0.85em; }
 
 .o-label__note {
   color: #f7f5f2;
@@ -775,8 +805,7 @@ html {
 
 .o-select {
   position: relative;
-  vertical-align: middle;
-  z-index: 1; }
+  vertical-align: middle; }
   .o-select select {
     position: relative;
     text-indent: .01px;
@@ -824,47 +853,139 @@ html {
     margin: 0 .5rem 0 0;
     width: auto; }
 
+.o-fieldset--description-list .o-fieldset__item + .o-fieldset__item {
+  margin-top: 1.7em; }
+
+@media only screen and (min-width: 1000px) {
+  .o-fieldset--description-list .o-fieldset__item {
+    font-size: 1.8rem; }
+    .o-fieldset--description-list .o-fieldset__item:before, .o-fieldset--description-list .o-fieldset__item:after {
+      content: "";
+      display: table; }
+    .o-fieldset--description-list .o-fieldset__item:after {
+      clear: both; }
+    .o-fieldset--description-list .o-fieldset__item + .o-fieldset__item {
+      margin-top: 1.7em; }
+  .o-fieldset--description-list .o-checkbox,
+  .o-fieldset--description-list .o-radio {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 23.5%;
+    margin-left: 0%;
+    margin-right: 2%; }
+    .o-fieldset--description-list .o-checkbox:before, .o-fieldset--description-list .o-checkbox:after,
+    .o-fieldset--description-list .o-radio:before,
+    .o-fieldset--description-list .o-radio:after {
+      content: '';
+      display: table; }
+    .o-fieldset--description-list .o-checkbox:after,
+    .o-fieldset--description-list .o-radio:after {
+      clear: both; }
+    .o-fieldset--description-list .o-checkbox:last-child,
+    .o-fieldset--description-list .o-radio:last-child {
+      margin-right: 0%; }
+  .o-fieldset--description-list .o-fieldset__item-description {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 74.5%;
+    margin-left: 0%;
+    margin-right: 2%; }
+    .o-fieldset--description-list .o-fieldset__item-description:before, .o-fieldset--description-list .o-fieldset__item-description:after {
+      content: '';
+      display: table; }
+    .o-fieldset--description-list .o-fieldset__item-description:after {
+      clear: both; }
+    .o-fieldset--description-list .o-fieldset__item-description:last-child {
+      margin-right: 0%; }
+  .enhance .o-fieldset--description-list .o-checkbox,
+  .enhance .o-fieldset--description-list .o-radio {
+    padding-top: 0; } }
+
 .enhance .o-checkbox,
 .enhance .o-radio {
   font-weight: normal;
-  padding: 0.85em 0.85em 0.85em 3rem;
+  padding: 0.85em 0;
   position: relative; }
-  .enhance .o-checkbox .o-checkbox__label:before,
-  .enhance .o-checkbox .o-radio__label:before,
-  .enhance .o-radio .o-checkbox__label:before,
-  .enhance .o-radio .o-radio__label:before {
-    content: "";
-    width: 2rem;
-    height: 2rem;
-    background: transparent;
-    border: 0.1rem solid #f7f5f2;
-    box-sizing: border-box;
-    content: '';
+  .enhance .o-checkbox .o-checkbox__button,
+  .enhance .o-checkbox .o-radio__button,
+  .enhance .o-radio .o-checkbox__button,
+  .enhance .o-radio .o-radio__button {
+    width: 3rem;
+    height: 3rem;
+    border: 0.2rem solid #f7f5f2;
+    background-color: #FFFFFF;
+    display: inline-block;
+    margin-right: 1rem;
+    vertical-align: middle;
+    border-radius: 0.3rem;
+    transition: background-color 0.3s ease;
     position: absolute;
-    top: 0.85em;
-    left: 0;
-    transition: background-color 0.3s ease, border-color 0.3s ease; }
+    left: 0; }
+    .no-enhance .enhance .o-checkbox .o-checkbox__button, .no-enhance
+    .enhance .o-checkbox .o-radio__button, .no-enhance
+    .enhance .o-radio .o-checkbox__button, .no-enhance
+    .enhance .o-radio .o-radio__button {
+      display: none; }
   .enhance .o-checkbox .o-checkbox__input,
   .enhance .o-checkbox .o-radio__input,
   .enhance .o-radio .o-checkbox__input,
   .enhance .o-radio .o-radio__input {
     display: none; }
-    .enhance .o-checkbox .o-checkbox__input:checked + .o-checkbox__label:before,
-    .enhance .o-checkbox .o-checkbox__input:checked + .o-radio__label:before,
-    .enhance .o-checkbox .o-radio__input:checked + .o-checkbox__label:before,
-    .enhance .o-checkbox .o-radio__input:checked + .o-radio__label:before,
-    .enhance .o-radio .o-checkbox__input:checked + .o-checkbox__label:before,
-    .enhance .o-radio .o-checkbox__input:checked + .o-radio__label:before,
-    .enhance .o-radio .o-radio__input:checked + .o-checkbox__label:before,
-    .enhance .o-radio .o-radio__input:checked + .o-radio__label:before {
-      background-color: #ff9933;
-      border-color: #ff8000; }
-  .enhance .o-checkbox .o-checkbox__label:before,
-  .enhance .o-radio .o-checkbox__label:before {
-    border-radius: 0.3rem; }
+    .enhance .o-checkbox .o-checkbox__input:checked + input[type="hidden"] + .o-checkbox__label .o-checkbox__button .o-checkbox__icon,
+    .enhance .o-checkbox .o-checkbox__input:checked + input[type="hidden"] + .o-radio__label-radio__button .o-radio__button .o-checkbox__icon,
+    .enhance .o-checkbox .o-checkbox__input:checked + .o-checkbox__label .o-checkbox__button .o-checkbox__icon,
+    .enhance .o-checkbox .o-checkbox__input:checked + .o-radio__label-radio__button .o-radio__button .o-checkbox__icon,
+    .enhance .o-checkbox .o-radio__input:checked + input[type="hidden"] + .o-checkbox__label .o-checkbox__button .o-checkbox__icon,
+    .enhance .o-checkbox .o-radio__input:checked + input[type="hidden"] + .o-radio__label-radio__button .o-radio__button .o-checkbox__icon,
+    .enhance .o-checkbox .o-radio__input:checked + .o-checkbox__label .o-checkbox__button .o-checkbox__icon,
+    .enhance .o-checkbox .o-radio__input:checked + .o-radio__label-radio__button .o-radio__button .o-checkbox__icon,
+    .enhance .o-radio .o-checkbox__input:checked + input[type="hidden"] + .o-checkbox__label .o-checkbox__button .o-checkbox__icon,
+    .enhance .o-radio .o-checkbox__input:checked + input[type="hidden"] + .o-radio__label-radio__button .o-radio__button .o-checkbox__icon,
+    .enhance .o-radio .o-checkbox__input:checked + .o-checkbox__label .o-checkbox__button .o-checkbox__icon,
+    .enhance .o-radio .o-checkbox__input:checked + .o-radio__label-radio__button .o-radio__button .o-checkbox__icon,
+    .enhance .o-radio .o-radio__input:checked + input[type="hidden"] + .o-checkbox__label .o-checkbox__button .o-checkbox__icon,
+    .enhance .o-radio .o-radio__input:checked + input[type="hidden"] + .o-radio__label-radio__button .o-radio__button .o-checkbox__icon,
+    .enhance .o-radio .o-radio__input:checked + .o-checkbox__label .o-checkbox__button .o-checkbox__icon,
+    .enhance .o-radio .o-radio__input:checked + .o-radio__label-radio__button .o-radio__button .o-checkbox__icon {
+      opacity: 1; }
   .enhance .o-checkbox .o-radio__label:before,
   .enhance .o-radio .o-radio__label:before {
     border-radius: 50%; }
+
+.enhance .o-checkbox__label,
+.enhance .o-radio__label {
+  font-weight: 900;
+  font-size: 1.8rem;
+  display: block;
+  position: relative;
+  padding-left: 4rem; }
+
+.enhance .o-checkbox__icon {
+  width: 14px;
+  height: 12px;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -1px;
+  -webkit-transform: translate(-50%, -50%) rotate(45deg);
+      -ms-transform: translate(-50%, -50%) rotate(45deg);
+          transform: translate(-50%, -50%) rotate(45deg);
+  transition: opacity 0.3s ease;
+  line-height: 1; }
+  .enhance .o-checkbox__icon::before {
+    content: "";
+    width: 50%;
+    height: 100%;
+    display: block;
+    margin: auto;
+    border-right: 3px solid #222222;
+    border-bottom: 3px solid #222222;
+    box-sizing: border-box; }
 
 .enhance .o-label--checkbox:after {
   border-radius: 0.3rem; }
@@ -880,6 +1001,151 @@ html {
 .o-select + .c-button,
 .o-textarea + .c-button {
   margin-top: 3.4em; }
+
+.flexbox .o-form__inline-field {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.o-form__inline-field .o-label {
+  display: inline-block;
+  padding-bottom: 0;
+  margin-right: 1.7em; }
+
+.o-form__inline-field .selectric-wrapper {
+  display: inline-block; }
+
+.o-form__row + .o-form__row {
+  margin-top: 1.7em; }
+
+@media only screen and (min-width: 800px) {
+  .o-form__row + .o-form__row {
+    margin-top: 5rem; }
+  .o-form__row--two:before, .o-form__row--two:after,
+  .o-form__row--three:before,
+  .o-form__row--three:after {
+    content: "";
+    display: table; }
+  .o-form__row--two:after,
+  .o-form__row--three:after {
+    clear: both; }
+  .o-form__row--two .o-form__field,
+  .o-form__row--three .o-form__field {
+    margin-top: 0; }
+  .o-form__row--two .o-form__field {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 49%;
+    margin-left: 0%;
+    margin-right: 2%; }
+    .o-form__row--two .o-form__field:before, .o-form__row--two .o-form__field:after {
+      content: '';
+      display: table; }
+    .o-form__row--two .o-form__field:after {
+      clear: both; }
+    .o-form__row--two .o-form__field:last-child {
+      margin-right: 0%; }
+  .o-form__row--three .o-form__field {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 32%;
+    margin-left: 0%;
+    margin-right: 2%; }
+    .o-form__row--three .o-form__field:before, .o-form__row--three .o-form__field:after {
+      content: '';
+      display: table; }
+    .o-form__row--three .o-form__field:after {
+      clear: both; }
+    .o-form__row--three .o-form__field:last-child {
+      margin-right: 0%; } }
+
+@media only screen and (min-width: 600px) and (max-width: 999px) {
+  .o-form__row--two-one:before, .o-form__row--two-one:after {
+    content: "";
+    display: table; }
+  .o-form__row--two-one:after {
+    clear: both; }
+  .o-form__row--two-one .o-form__field--first,
+  .o-form__row--two-one .o-form__field--second {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 49%;
+    margin-left: 0%;
+    margin-right: 2%;
+    margin-top: 0;
+    margin-bottom: 1.7em; }
+    .o-form__row--two-one .o-form__field--first:before, .o-form__row--two-one .o-form__field--first:after,
+    .o-form__row--two-one .o-form__field--second:before,
+    .o-form__row--two-one .o-form__field--second:after {
+      content: '';
+      display: table; }
+    .o-form__row--two-one .o-form__field--first:after,
+    .o-form__row--two-one .o-form__field--second:after {
+      clear: both; }
+    .o-form__row--two-one .o-form__field--first:nth-child(2n),
+    .o-form__row--two-one .o-form__field--second:nth-child(2n) {
+      margin-right: 0%;
+      float: right; }
+    .o-form__row--two-one .o-form__field--first:nth-child(2n + 1),
+    .o-form__row--two-one .o-form__field--second:nth-child(2n + 1) {
+      clear: both; }
+  .o-form__row--two-one .o-form__field--last {
+    clear: both; } }
+
+@media only screen and (min-width: 1000px) {
+  .o-form__row--two-one:before, .o-form__row--two-one:after {
+    content: "";
+    display: table; }
+  .o-form__row--two-one:after {
+    clear: both; }
+  .o-form__row--two-one .o-form__field {
+    margin-top: 0; }
+  .o-form__row--two-one .o-form__field--first,
+  .o-form__row--two-one .o-form__field--second {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 23.5%;
+    margin-left: 0%;
+    margin-right: 2%; }
+    .o-form__row--two-one .o-form__field--first:before, .o-form__row--two-one .o-form__field--first:after,
+    .o-form__row--two-one .o-form__field--second:before,
+    .o-form__row--two-one .o-form__field--second:after {
+      content: '';
+      display: table; }
+    .o-form__row--two-one .o-form__field--first:after,
+    .o-form__row--two-one .o-form__field--second:after {
+      clear: both; }
+    .o-form__row--two-one .o-form__field--first:last-child,
+    .o-form__row--two-one .o-form__field--second:last-child {
+      margin-right: 0%; }
+  .o-form__row--two-one .o-form__field--last {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 49%;
+    margin-left: 0%;
+    margin-right: 2%; }
+    .o-form__row--two-one .o-form__field--last:before, .o-form__row--two-one .o-form__field--last:after {
+      content: '';
+      display: table; }
+    .o-form__row--two-one .o-form__field--last:after {
+      clear: both; }
+    .o-form__row--two-one .o-form__field--last:last-child {
+      margin-right: 0%; } }
 
 /* ===========================================================
 
@@ -899,7 +1165,7 @@ html {
   .o-aspect--21-9:before {
     content: "";
     display: block;
-    background-color: #f7f5f2; }
+    background-color: #ede9e2; }
   .o-aspect--1-1 img,
   .o-aspect--4-3 img,
   .o-aspect--3-2 img,
@@ -981,7 +1247,7 @@ img {
 
 .o-media--video {
   position: relative;
-  background-color: #f7f5f2; }
+  background-color: #ede9e2; }
   .o-media--video:before {
     content: '';
     display: block;
@@ -1889,7 +2155,7 @@ img.mfp-img {
 .c-cover {
   position: relative;
   overflow: hidden;
-  background-color: #f7f5f2; }
+  background-color: #ede9e2; }
   .c-cover::after {
     content: "";
     width: 100%;
@@ -3528,5 +3794,51 @@ img.mfp-img {
     z-index: 1; }
   .t-home__about__col__quote {
     padding-left: 5%; } }
+
+/* ===========================================================
+	# Contact
+=========================================================== */
+.s-contact .c-contact-details__email {
+  font-weight: 700; }
+
+@media only screen and (max-width: 599px) {
+  .s-contact__cols__col--first + .s-contact__cols__col--last {
+    margin-top: 1.7em; } }
+
+@media only screen and (min-width: 600px) {
+  .s-contact__cols__col--first {
+    font-size: 1.8rem;
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 42.7777777778%;
+    margin-left: 0%;
+    margin-right: 3%; }
+    .s-contact__cols__col--first:before, .s-contact__cols__col--first:after {
+      content: '';
+      display: table; }
+    .s-contact__cols__col--first:after {
+      clear: both; }
+    .s-contact__cols__col--first:last-child {
+      margin-right: 0%; }
+    .s-contact__cols__col--first .c-contact-details__headline {
+      font-size: 3.125rem;
+      padding-bottom: 1.5625rem; }
+  .s-contact__cols__col--last {
+    *zoom: 1;
+    float: left;
+    clear: none;
+    text-align: inherit;
+    width: 54.2222222222%;
+    margin-left: 0%;
+    margin-right: 3%; }
+    .s-contact__cols__col--last:before, .s-contact__cols__col--last:after {
+      content: '';
+      display: table; }
+    .s-contact__cols__col--last:after {
+      clear: both; }
+    .s-contact__cols__col--last:last-child {
+      margin-right: 0%; } }
 
 /*# sourceMappingURL=style.css.map */
