Add contact map

--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -57,7 +57,7 @@
 		'components/link-list',
 		'components/carousel',
 		'components/breadcrumb',
-//		'components/map',
+		'components/map',
 		'components/social',
 //		'components/tile',
 		'components/pagination',
