--- a/iCAN.Web/assets/css/ie.css
+++ b/iCAN.Web/assets/css/ie.css
@@ -3029,6 +3029,24 @@ img.mfp-img {
     font-weight: 900; }
 
 /* ===========================================================
+	# Map
+=========================================================== */
+.c-map > div {
+  top: 0; }
+
+.enhance .c-map {
+  position: relative;
+  background-color: #ede9e2; }
+  .enhance .c-map:after {
+    content: "";
+    display: block;
+    padding-top: 42.8571428571%; }
+
+@media only screen and (min-width: 800px) {
+  .enhance .c-map:after {
+    padding-top: 44rem; } }
+
+/* ===========================================================
 
 	# Social links
 
