--- a/_assets/sass/settings/global.scss
+++ b/_assets/sass/settings/global.scss
@@ -87,7 +87,7 @@ $padding-large:				10rem;
 $border-width: 				.1rem;
 $border-radius: 			.3rem;
 $speed: 					.3s;
-$ease:						ease;
+$ease:						ease-out;
 
 $light:						300;
 $regular:					500;
