--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -45,6 +45,7 @@
 		'components/nav',
 		'components/buttons',
 		'components/site-logo',
+		'components/header-compact',
 		'components/quote',
 		'components/cover',
 		'components/card',
