--- a/iCAN.Web/Views/Partials/Modules/Header.cshtml
+++ b/iCAN.Web/Views/Partials/Modules/Header.cshtml
@@ -5,7 +5,7 @@
     var siteName = TGDH.Settings<string>("websiteName");
 }
 
-<header id="header" class="c-header" role="banner">
+<header id="header" class="c-header js-header" role="banner">
 	@Html.Partial("~/Views/Partials/Components/SuperNavigation.cshtml")
 	<div class="o-wrap o-wrap--x-large">
 		<a href="/" class="c-header__logo-link">
