--- a/iCAN.Web/assets/css/style.css
+++ b/iCAN.Web/assets/css/style.css
@@ -469,7 +469,7 @@ figcaption {
 =========================================================== */
 a {
   color: #ff9933;
-  transition: color 0.3s ease; }
+  transition: color 0.3s ease-out; }
   a:hover, a:focus {
     color: #4f1c47; }
 
@@ -539,7 +539,7 @@ textarea {
   border: 0.1rem solid #f7f5f2;
   border-radius: 0.3rem;
   padding: 1rem 1.5rem;
-  transition: border 0.3s ease;
+  transition: border 0.3s ease-out;
   width: 100%; }
   input:focus,
   select:focus,
@@ -922,7 +922,7 @@ html {
     margin-right: 1rem;
     vertical-align: middle;
     border-radius: 0.3rem;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease-out;
     position: absolute;
     left: 0; }
     .no-enhance .enhance .o-checkbox .o-checkbox__button, .no-enhance
@@ -975,7 +975,7 @@ html {
   -webkit-transform: translate(-50%, -50%) rotate(45deg);
       -ms-transform: translate(-50%, -50%) rotate(45deg);
           transform: translate(-50%, -50%) rotate(45deg);
-  transition: opacity 0.3s ease;
+  transition: opacity 0.3s ease-out;
   line-height: 1; }
   .enhance .o-checkbox__icon::before {
     content: "";
@@ -1704,7 +1704,7 @@ img.mfp-img {
   padding: 2.2rem 2.5rem;
   z-index: 1;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
-  transition: color 0.3s ease, background 0.3s ease; }
+  transition: color 0.3s ease-out, background 0.3s ease-out; }
   .mfp-close:hover {
     background: #4f1c47; }
   .mfp-close:focus {
@@ -1848,7 +1848,7 @@ img.mfp-img {
 .c-header {
   position: relative;
   z-index: 10;
-  transition: background 0.3s ease, border-color 0.3s ease; }
+  transition: background 0.3s ease-out, border-color 0.3s ease-out; }
 
 .c-header__logo-link {
   display: block;
@@ -1869,7 +1869,7 @@ img.mfp-img {
     display: block;
     float: right;
     padding: .9rem 1.3rem .8rem;
-    transition: color 0.3s ease, background 0.3s ease; }
+    transition: color 0.3s ease-out, background 0.3s ease; }
     .enhance .c-header__toggle-menu-button i {
       vertical-align: middle; }
     .enhance .c-header__toggle-menu-button:hover, .enhance .c-header__toggle-menu-button:focus {
@@ -1909,7 +1909,7 @@ img.mfp-img {
   padding: 1rem;
   display: block;
   font-weight: 700;
-  transition: color 0.3s ease, background 0.3s ease; }
+  transition: color 0.3s ease-out, background 0.3s ease-out; }
   .c-nav--main .c-nav__link:hover, .c-nav--main .c-nav__link:focus {
     color: #4f1c47; }
   .c-nav--main .c-nav__link.is-active {
@@ -1941,9 +1941,9 @@ img.mfp-img {
     -webkit-transform: translateY(-1rem);
         -ms-transform: translateY(-1rem);
             transform: translateY(-1rem);
-    transition: opacity 0.3s ease, visibility 0.3s ease, -webkit-transform 0.3s ease;
-    transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s ease;
-    transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s ease, -webkit-transform 0.3s ease; }
+    transition: opacity 0.3s ease-out, visibility 0.3s ease-out, -webkit-transform 0.3s ease-out;
+    transition: opacity 0.3s ease-out, visibility 0.3s ease-out, transform 0.3s ease-out;
+    transition: opacity 0.3s ease-out, visibility 0.3s ease-out, transform 0.3s ease-out, -webkit-transform 0.3s ease-out; }
   .enhance.nav-main-open .c-header__nav-wrap {
     opacity: 1;
     visibility: visible;
@@ -1966,7 +1966,7 @@ img.mfp-img {
     .c-nav--main .c-nav__link {
       display: inline-block;
       padding: 1rem;
-      transition: color 0.3s ease; }
+      transition: color 0.3s ease-out; }
       .c-nav--main .c-nav__link:after {
         content: "";
         display: block;
@@ -1974,9 +1974,9 @@ img.mfp-img {
         height: .2rem;
         opacity: 0;
         background-color: #4f1c47;
-        transition: opacity 0.3s ease, -webkit-transform 0.3s ease;
-        transition: opacity 0.3s ease, transform 0.3s ease;
-        transition: opacity 0.3s ease, transform 0.3s ease, -webkit-transform 0.3s ease; }
+        transition: opacity 0.3s ease-out, -webkit-transform 0.3s ease-out;
+        transition: opacity 0.3s ease-out, transform 0.3s ease-out;
+        transition: opacity 0.3s ease-out, transform 0.3s ease-out, -webkit-transform 0.3s ease-out; }
       .c-nav--main .c-nav__link.is-active:after {
         opacity: 1;
         -webkit-transform: translateY(-0.4rem);
@@ -2001,9 +2001,9 @@ img.mfp-img {
       -webkit-transform: translate(1rem, -0.3rem);
           -ms-transform: translate(1rem, -0.3rem);
               transform: translate(1rem, -0.3rem);
-      transition: opacity 0.3s ease, visibility 0.3s ease, -webkit-transform 0.3s ease;
-      transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s ease;
-      transition: opacity 0.3s ease, visibility 0.3s ease, transform 0.3s ease, -webkit-transform 0.3s ease; }
+      transition: opacity 0.3s ease-out, visibility 0.3s ease-out, -webkit-transform 0.3s ease-out;
+      transition: opacity 0.3s ease-out, visibility 0.3s ease-out, transform 0.3s ease-out;
+      transition: opacity 0.3s ease-out, visibility 0.3s ease-out, transform 0.3s ease-out, -webkit-transform 0.3s ease-out; }
       .c-nav--main .c-nav__list--sub .c-nav__item,
       .c-nav--main .c-nav__list--sub .c-nav__link {
         display: block; }
@@ -2040,7 +2040,7 @@ img.mfp-img {
   text-align: center;
   padding: 1.2rem 2rem;
   font-weight: 700;
-  transition: background 0.3s ease, box-shadow 0.3s ease, color 0.3s ease; }
+  transition: background 0.3s ease-out, box-shadow 0.3s ease-out, color 0.3s ease-out; }
   .c-button:hover, .c-button:focus {
     color: #FFFFFF; }
   .c-button:focus {
@@ -2097,6 +2097,13 @@ img.mfp-img {
 
 =========================================================== */
 .c-site-logo__bubble {
+  transition: fill 0.3s ease-out; }
+
+.c-site-logo__name,
+.c-site-logo__strapline {
+  transition: opacity 0.3s ease-out; }
+
+.c-site-logo__bubble {
   fill: #4f1c47; }
 
 .c-site-logo__name {
@@ -2111,6 +2118,64 @@ img.mfp-img {
 .c-site-logo--invert .c-site-logo__bubble,
 .c-site-logo--invert .c-site-logo__strapline {
   fill: #FFFFFF; }
+
+/* ===========================================================
+
+# Header - compact
+
+=========================================================== */
+.enhance .is-fixed {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0; }
+
+.enhance .c-header {
+  transition: padding 0.3s ease-out;
+  will-change: padding; }
+  .enhance .c-header:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-color: rgba(79, 28, 71, 0.98);
+    transition: opacity 0.3s ease-out;
+    transition-delay: 0.3s;
+    opacity: 0; }
+
+@media only screen and (min-width: 800px) {
+  .enhance .c-nav--main,
+  .enhance .c-header__logo-link {
+    will-change: margin;
+    transition: margin 0.3s ease-out; }
+  .enhance .c-header--compact {
+    position: fixed;
+    left: 0;
+    right: 0;
+    padding-top: 0;
+    padding-bottom: 0; }
+    .enhance .c-header--compact:before {
+      opacity: 1; }
+    .enhance .c-header--compact .c-nav--super {
+      background-color: transparent; }
+    .enhance .c-header--compact .c-nav--main {
+      margin-top: 0; }
+    .enhance .c-header--compact .c-nav__link {
+      color: #FFFFFF; }
+      .enhance .c-header--compact .c-nav__link:after {
+        background-color: #FFFFFF; }
+    .enhance .c-header--compact .c-header__logo-link {
+      margin-bottom: -5.4rem;
+      margin-top: -3rem; }
+    .enhance .c-header--compact .c-site-logo__name,
+    .enhance .c-header--compact .c-site-logo__strapline {
+      opacity: 0; }
+    .enhance .c-header--compact .c-site-logo__bubble {
+      fill: #FFFFFF; } }
 
 /* ===========================================================
 
@@ -2259,7 +2324,7 @@ img.mfp-img {
   background-color: #FFFFFF; }
 
 .c-card__headline {
-  transition: color 0.3s ease; }
+  transition: color 0.3s ease-out; }
 
 .c-card__link {
   color: #000000;
@@ -2276,7 +2341,7 @@ img.mfp-img {
     opacity: 0;
     z-index: -1;
     box-shadow: 0 0 60px rgba(0, 0, 0, 0.15);
-    transition: opacity 0.3s ease; }
+    transition: opacity 0.3s ease-out; }
   .c-card__link:hover, .c-card__link:focus {
     color: inherit; }
     .c-card__link:hover .c-card__headline, .c-card__link:focus .c-card__headline {
@@ -2499,18 +2564,18 @@ img.mfp-img {
     padding: 1.9rem 2rem;
     border-radius: 50%;
     box-shadow: 0 0 60px rgba(68, 68, 68, 0.3);
-    transition: background-color 0.3s ease, -webkit-transform 0.3s ease;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-    transition: background-color 0.3s ease, transform 0.3s ease, -webkit-transform 0.3s ease; }
+    transition: background-color 0.3s ease-out, -webkit-transform 0.3s ease-out;
+    transition: background-color 0.3s ease-out, transform 0.3s ease-out;
+    transition: background-color 0.3s ease-out, transform 0.3s ease-out, -webkit-transform 0.3s ease-out; }
     .enhance .c-carousel--prev:before,
     .enhance .c-carousel--next:before {
       color: #ff9933;
-      transition: color 0.3s ease; }
+      transition: color 0.3s ease-out; }
     .enhance .c-carousel--prev .ico-arrow-left,
     .enhance .c-carousel--prev .ico-arrow-right,
     .enhance .c-carousel--next .ico-arrow-left,
     .enhance .c-carousel--next .ico-arrow-right {
-      transition: border-color 0.3s ease; }
+      transition: border-color 0.3s ease-out; }
     .enhance .c-carousel--prev .ico-arrow-left,
     .enhance .c-carousel--next .ico-arrow-left {
       width: 0;
@@ -2615,7 +2680,7 @@ img.mfp-img {
   .c-carousel--cards .slick-slide {
     margin: 0 1.5rem;
     opacity: 0.1;
-    transition: opacity 0.6s ease; }
+    transition: opacity 0.6s ease-out; }
     .c-carousel--cards .slick-slide.slick-active {
       opacity: 1; }
 
@@ -2741,7 +2806,7 @@ img.mfp-img {
   color: #4f1c47;
   padding: 1.4rem;
   font-size: 1.8rem;
-  transition: background-color 0.3s ease; }
+  transition: background-color 0.3s ease-out; }
   .c-link-list__link:hover {
     background-color: #f7f5f2; }
 
@@ -2808,18 +2873,18 @@ img.mfp-img {
     padding: 1.9rem 2rem;
     border-radius: 50%;
     box-shadow: 0 0 60px rgba(68, 68, 68, 0.3);
-    transition: background-color 0.3s ease, -webkit-transform 0.3s ease;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-    transition: background-color 0.3s ease, transform 0.3s ease, -webkit-transform 0.3s ease; }
+    transition: background-color 0.3s ease-out, -webkit-transform 0.3s ease-out;
+    transition: background-color 0.3s ease-out, transform 0.3s ease-out;
+    transition: background-color 0.3s ease-out, transform 0.3s ease-out, -webkit-transform 0.3s ease-out; }
     .enhance .c-carousel--prev:before,
     .enhance .c-carousel--next:before {
       color: #ff9933;
-      transition: color 0.3s ease; }
+      transition: color 0.3s ease-out; }
     .enhance .c-carousel--prev .ico-arrow-left,
     .enhance .c-carousel--prev .ico-arrow-right,
     .enhance .c-carousel--next .ico-arrow-left,
     .enhance .c-carousel--next .ico-arrow-right {
-      transition: border-color 0.3s ease; }
+      transition: border-color 0.3s ease-out; }
     .enhance .c-carousel--prev .ico-arrow-left,
     .enhance .c-carousel--next .ico-arrow-left {
       width: 0;
@@ -2924,7 +2989,7 @@ img.mfp-img {
   .c-carousel--cards .slick-slide {
     margin: 0 1.5rem;
     opacity: 0.1;
-    transition: opacity 0.6s ease; }
+    transition: opacity 0.6s ease-out; }
     .c-carousel--cards .slick-slide.slick-active {
       opacity: 1; }
 
@@ -3054,9 +3119,9 @@ img.mfp-img {
 .c-social__link {
   color: #FFFFFF;
   display: inline-block;
-  transition: background 0.3s ease, color 0.3s ease; }
+  transition: background 0.3s ease-out, color 0.3s ease-out; }
   .c-social__link .u-icon {
-    transition: fill 0.3s ease; }
+    transition: fill 0.3s ease-out; }
   .c-social__link:hover .u-icon, .c-social__link:focus .u-icon {
     fill: #4f1c47; }
 
@@ -3219,7 +3284,7 @@ img.mfp-img {
   color: #FFFFFF;
   padding: 1rem 2rem;
   border-radius: 0.3rem;
-  transition: opacity 0.3s ease, color 0.3s ease, background 0.3s ease, visibility 0.3s ease; }
+  transition: opacity 0.3s ease-out, color 0.3s ease-out, background 0.3s ease-out, visibility 0.3s ease-out; }
 
 .c-alert--hidden {
   visibility: hidden;
@@ -3299,7 +3364,8 @@ img.mfp-img {
     margin: 0; }
   .c-nav--super .c-nav__link {
     color: #FFFFFF;
-    transition: background-color 0.3s ease; }
+    font-weight: 700;
+    transition: background-color 0.3s ease-out; }
     .c-nav--super .c-nav__link:hover {
       background-color: #3a113e; }
 
@@ -3371,7 +3437,7 @@ img.mfp-img {
   padding: 1rem 0;
   display: block;
   font-weight: 900;
-  transition: color 0.3s ease, background 0.3s ease; }
+  transition: color 0.3s ease-out, background 0.3s ease-out; }
 
 @media only screen and (min-width: 600px) {
   .c-nav--footer .c-nav__item {
@@ -3453,7 +3519,7 @@ img.mfp-img {
 
 .enhance .js-tabs {
   opacity: 0;
-  transition: opacity 0.3s ease; }
+  transition: opacity 0.3s ease-out; }
   .enhance .js-tabs.js-tabs--loaded {
     opacity: 1; }
 
@@ -3485,13 +3551,13 @@ img.mfp-img {
 .enhance .c-tabs__nav-tab {
   padding: 1.2rem;
   display: block;
-  transition: color 0.3s ease, background 0.3s ease; }
+  transition: color 0.3s ease-out, background 0.3s ease-out; }
 
 .enhance .c-tabs__page {
   position: absolute;
   top: 0;
   bottom: 0;
-  transition: color 0.3s ease, opacity 0.3s ease; }
+  transition: color 0.3s ease-out, opacity 0.3s ease-out; }
   .enhance .c-tabs__page.is-disabled {
     opacity: .1; }
 
@@ -3509,7 +3575,7 @@ img.mfp-img {
 
 .enhance .c-tabs__content {
   position: relative;
-  transition: height 0.3s ease; }
+  transition: height 0.3s ease-out; }
 
 .enhance .c-tabs__content-tab {
   width: 100%;
@@ -3517,7 +3583,7 @@ img.mfp-img {
   position: absolute;
   visibility: hidden;
   opacity: 0;
-  transition: opacity 0.3s ease, visibility 0.3s ease; }
+  transition: opacity 0.3s ease-out, visibility 0.3s ease-out; }
   .enhance .c-tabs__content-tab.is-active {
     opacity: 1;
     visibility: visible; }
